# MrDocument

./: Cargo.toml  Makefile  README.md
src/: api_key.rs  bin.rs  chatgpt.rs  document.rs  error.rs  file.rs  file_info.rs  file_object.rs  handler.rs  install.rs  lib.rs  main_loop.rs  paths.rs  pdf.rs  profile.rs  profile_handler.rs  util.rs  watcher.rs  watcher_example.rs
