[package]
name = "mrdocument"
version = "0.1.0"
authors = ["Ole Kliemann <mail@olekliemann.de>"]
edition = "2021"
license = "Apache-2.0"
description = ""
repository = "https://github.com/olekli/mrdocument"
readme = "README.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
notify = "7.0.0"
openai_api_rust = "0.1.9"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1.16", features = ["signal"] }

[lib]
name = "mrdocument"
path = "src/lib.rs"

[[bin]]
name = "mrdocument"
path = "src/bin.rs"
