[package]
name = "mrdocument"
version = "0.1.0"
authors = ["Ole Kliemann <mail@olekliemann.de>"]
edition = "2021"
license = "Apache-2.0"
description = "Automatic PDF transcription and classification via OpenAI"
repository = "https://github.com/olekli/mrdocument"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
display_json = "0.2.1"
env_logger = "0.11.5"
fmt = "0.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
lopdf = { version = "0.34.0", features = ["async", "tokio"] }
notify = "7.0.0"
openai-api-rs = "5.2.2"
serde = "1.0.215"
serde_json = "1.0.133"
tempdir = "0.3.7"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1.16", features = ["io-util", "signal", "time"] }
which = "7.0.0"

[lib]
name = "mrdocument"
path = "src/lib.rs"

[[bin]]
name = "mrdocument"
path = "src/bin.rs"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
rstest = "0.23.0"
