[package]
name = "mrdocument"
version = "0.4.0"
authors = ["Ole Kliemann <mail@olekliemann.de>"]
edition = "2021"
license = "Apache-2.0"
description = "Automatic PDF transcription and classification via OpenAI"
repository = "https://github.com/olekli/mrdocument"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
display_json = "0.2.1"
env_logger = "0.11.5"
filetime = "0.2.25"
fmt = "0.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
lopdf = { version = "0.34.0", features = ["async", "tokio"] }
notify = "7.0.0"
once_cell = "1.20.2"
openai-api-rs = "5.2.2"
schemars = "0.8.21"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tempdir = "0.3.7"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1.16", features = ["io-util", "signal", "time"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
which = "7.0.0"

[lib]
name = "mrdocument"
path = "src/lib.rs"

[[bin]]
name = "mrdocument"
path = "src/bin.rs"

[[bin]]
name = "mrdocument-install"
path = "src/install.rs"

[[bin]]
name = "mrdocument-watcher-example"
path = "src/watcher_example.rs"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
rstest = "0.23.0"
